Use system font name

--- a/Bye-bye_MS_Gothic.user.css
+++ b/Bye-bye_MS_Gothic.user.css
@@ -2,20 +2,20 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 @font-face {
   font-family: "ＭＳ Ｐゴシック";
-  src: local("メイリオ"), local("Meiryo"), local("ＭＳ Ｐゴシック");
+  src: local("Meiryo"), local("MS PGothic");
 }
 @font-face {
   font-family: "MS PGothic";
-  src: local("メイリオ"), local("Meiryo"), local("ＭＳ Ｐゴシック");
+  src: local("Meiryo"), local("MS PGothic");
 }
 
 @font-face {
   font-family: "ＭＳ ゴシック";
-  src: local("Migmix 2M"), local("ＭＳ ゴシック");
+  src: local("Migmix 2M"), local("MS Gothic");
 }
 @font-face {
   font-family: "MS Gothic";
-  src: local("MigMix 2M"), local("ＭＳ ゴシック");
+  src: local("MigMix 2M"), local("MS Gothic");
 }
 
 @font-face {
