Hide bookmark menu aggressively

--- a/XUL_Hide_context_menu_elements.user.css
+++ b/XUL_Hide_context_menu_elements.user.css
@@ -55,20 +55,9 @@
 /* Search bar menu */
 #searchbar menuitem[cmd="cmd_clearhistory"],
 
-
-/* Bookmark menu
-
- * [新しいウィンドウで開く]
- * [新しいブックマーク][新しいフォルダ][新しい区切り]
- * [切り取り][コピー][貼り付け]
- * [名前順に並べ替える]
- * [セパレータ]... */
-#placesContext_open\:newwindow,
-#placesContext_new\:bookmark, #placesContext_new\:folder, #placesContext_new\:separator,
-#placesContext_cut, #placesContext_copy, #placesContext_paste,
-#placesContext_sortBy\:name,
-#placesContext_openSeparator, #placesContext_newSeparator, #placesContext_deleteSeparator,
-#placesContext_sortSeparator,
+/* Bookmark menu */
+#placesContext menuitem:not(:-moz-any(#placesContext_open, #placesContext_open\:newtab, #placesContext_openContainer\:tabs)),
+#placesContext menuseparator,
 
 /* Toolbar menu (Dismiss all)
 */
