--- a/XUL_Hide_context_menu_elements.user.css
+++ b/XUL_Hide_context_menu_elements.user.css
@@ -2,33 +2,26 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 /* Page menu
 
- * [リンクを新しいウィンドウで開く][リンクを新しいプライベートウィンドウで開く][セパレータ]
- * [戻る][進む][更新][中止][ブックマーク][セパレータ]（アイコン）
- * [このリンクをブックマーク]
+ * [ナビゲーションアイコン]
+ * [選択したURLを開く][リンクを新しい...で開く][このリンクをブックマーク]
  * [...をメールで送信]
- * [セパレータ]...
- * [名前をつけてページを保存][名前をつけて画像を保存][名前をつけて動画を保存][名前をつけてオーディオを保存][スナップショットを保存]
- * [選択したURLを開く][選択した部分のソースを表示]
- * [デスクトップの背景に設定][コントロールを隠す][この検索にキーワードを設定]
- * [背景画像を表示]（無効化されているとき） */
-#context-openlink, #context-openlinkprivate, #context-sep-open,
-#context-navigation, #context-sep-navigation,
-#context-bookmarklink,
+ * [名前をつけて...を保存][スナップショットを保存]
+ * [再生][一時停止][ミュート][ミュート解除]
+ * [全画面表示][全画面表示解除][動画を端末に送る][コントロールを隠す]
+ * [デスクトップの背景に設定][画像の情報を表示][選択した部分のソースを表示]
+ * [切り取り][削除][すべて選択][この検索にキーワードを設定][スペルチェックを行う]
+ * [背景画像を表示]（無効化されているとき）*/
+#context-navigation,
+#context-openlinkincurrent, #context-openlink, #context-openlinkprivate, #context-bookmarklink,
 #context-sendpage, #context-sendlink, #context-sendimage, #context-sendvideo, #context-sendaudio,
-#context-sep-viewbgimage, #context-sep-viewsource, #context-sep-properties, #context-sep-copyimage,
 #context-savepage, #context-saveimage, #context-savevideo, #context-saveaudio, #context-video-saveimage,
-#context-openlinkincurrent, #context-viewpartialsource-selection,
-#context-setDesktopBackground, #context-media-hidecontrols, #context-keywordfield,
+#context-media-play, #context-media-pause, #context-media-mute, #context-media-unmute,
+#context-video-fullscreen, #context-leave-dom-fullscreen, #context-castvideo, #context-media-hidecontrols,
+#context-setDesktopBackground, #context-viewimageinfo, #context-viewpartialsource-selection,
+#context-cut, #context-delete, #context-selectall, #context-keywordfield, #spell-check-enabled,
 #context-viewbgimage[disabled],
 
-/* Textarea menu
-
- * [切り取り][削除][セパレータ]
- * [すべて選択][セパレータ]
- * [スペルチェックを行う][セパレータ] */
-#context-cut, #context-delete, #context-sep-paste,
-#context-selectall, #context-sep-selectall,
-#spell-check-enabled, #spell-separator,
+#contentAreaContextMenu > menuseparator:not(:-moz-any(#page-menu-separator, #context-sep-open, #context-sep-copylink, #context-sep-undo, #inspect-separator)),
 
 /* Frame menu */
 #context-openframe, #context-bookmarkframe, #context-saveframe, #context-printframe,
