--- a/ALC_Eijiro_tweak.user.css
+++ b/ALC_Eijiro_tweak.user.css
@@ -1,17 +1,29 @@
 /* ALC Eijiro tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document domain("eow.alc.co.jp") {
-  #AreaBody > :not(#AreaUpperLeft),
+  #AreaBody > :not(#fixedBox):not(#AreaUpperLeft),
+  #fixedBox > :not(.search_area_left),
   #AreaUpperLeftInner > :not(#resultsArea),
-  #search_area > :not(.search_area_left),
-  #sw, #eijiro_img, #clearBtn, #searchHeader > dl, .tango, .ex_sentence,
-  #itemsNumber .smallredfont {
+  #sw, #eijiro_img, .tango, .ex_sentence, .pr_text,
+  #itemsNumber .smallredfont,
+  input[type="image"] {
     display: none !important;
   }
 
+  #fixedBox {
+    position: relative !important;
+    margin: 0 !important;
+    height: auto !important;
+    border: none !important;
+  }
+  .search_box {
+    width: 100% !important;
+    padding-right: 8px !important;
+  }
   #q {
     font: 22px/1 monospace !important;
     width: 20em !important;
+    border: 1px solid #aaa !important;
   }
 
   #resultsArea {
