Fix appearance corruption on forward button

--- a/XUL_Navigation_bar_tweak.user.css
+++ b/XUL_Navigation_bar_tweak.user.css
@@ -5,7 +5,7 @@
   visibility: collapse !important;
 }
 
-#nav-bar .toolbarbutton-1 {
+#nav-bar .toolbarbutton-1:not(#forward-button) {
   margin-top: -5px !important;
   margin-bottom: -5px !important;
 }
