Fix scope to apply on header control only

--- a/Amazon_Cloud_Player_tweak.user.css
+++ b/Amazon_Cloud_Player_tweak.user.css
@@ -10,7 +10,7 @@
     display: none !important;
   }
 
-  .listViewDuration {
+  #header .listViewDuration {
     font-weight: 300 !important;
     font-size: 1.8rem !important;
   }
