--- a/ALC_Eijiro_tweak.user.css
+++ b/ALC_Eijiro_tweak.user.css
@@ -68,5 +68,5 @@
     padding: 0 !important;
   }
 
-  .label:before { content: "\A"; white-space: pre; }
+  .label::before { content: "\A"; white-space: pre; }
 }
