--- a/Wikipedia_tweak.user.css
+++ b/Wikipedia_tweak.user.css
@@ -22,8 +22,8 @@
     z-index: 255 !important;
   }
 
-  #p-lang li.interwiki-en a:after, #p-lang li.interwiki-ja a:after { content: " \bb\a0 " attr(title); }
-  #p-lang li.interwiki-en a:hover, #p-lang li.interwiki-ja a:hover { background: #f70 !important; }
+  #p-lang li.interwiki-en a::after, #p-lang li.interwiki-ja a::after { content: " \bb\a0 " attr(title); }
+  #p-lang li.interwiki-en a:hover,  #p-lang li.interwiki-ja a:hover  { background: #f70 !important; }
 
   .mw-headline:target, .reference:target, .references li:target { padding-top: 3rem !important; background: transparent !important; }
   .reference:target > a, .references li:target a[href^="#cite_ref-"] { color: #f70 !important; font-weight: bold !important; }
