Revise a color for mixed content page

--- a/XUL_Change_the_location_bar_color_for_secure_sites.user.css
+++ b/XUL_Change_the_location_bar_color_for_secure_sites.user.css
@@ -11,5 +11,5 @@
 
 #urlbar[pageproxystate="valid"] #identity-box.mixedDisplayContent,
 #urlbar[pageproxystate="valid"] #identity-box.mixedDisplayContentLoadedActiveBlocked {
-  background-color: #fcc !important;
+  background-color: #fdd !important;
 }
