Hide empty query and/or fragment

--- a/XUL_Advanced_locationbar_tweak.user.css
+++ b/XUL_Advanced_locationbar_tweak.user.css
@@ -28,3 +28,8 @@
 .textbox-presentation-fragment {
   color: #bbb !important;
 }
+
+.textbox-presentation-query[value="?"],
+.textbox-presentation-fragment[value="#"] {
+  visibility: collapse !important;
+}
