Use larger font on navigation bar

--- a/XUL_Navigation_bar_tweak.user.css
+++ b/XUL_Navigation_bar_tweak.user.css
@@ -10,3 +10,7 @@
   margin-bottom: -5px !important;
 }
 
+#urlbar .textbox-input-box  {
+  font-size: 13px !important;
+  margin-top: -1px !important;
+}
