--- a/2ch.net_tweak.user.css
+++ b/2ch.net_tweak.user.css
@@ -1,7 +1,7 @@
 /* 2ch.net tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document domain("2ch.net"), domain("bbspink.com") {
-  form, hr, iframe { display: none !important; }
+  hr, iframe, .banner, [class*='ad--'] { display: none !important; }
 
   h1 {
     font: bold x-large/1.8 sans-serif !important;
