Activate style only for the URI with www
The number of pages hosted on sub domains of "amazon.co.jp" is increasing.
It needs to avoid a false activation.

--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -1,6 +1,6 @@
 /* Amazon.co.jp tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
-@-moz-document domain("amazon.co.jp") {
+@-moz-document domain("www.amazon.co.jp") {
   #nav-cart { opacity: 0.3 !important; }
 
   /* 3rd party reseller */
