Collapse ad area to reserve space for displaying contents

--- a/Impress_watch_tweak.user.css
+++ b/Impress_watch_tweak.user.css
@@ -25,4 +25,7 @@
 
   /* Hide gadgets */
   .social { display: none !important; }
+
+  /* Kill ads */
+  .ad.billboard { display: none !important; }
 }
