Fix the issue that identity box is broken if mixed content appears on the URI validated with EV certificate

--- a/XUL_Change_the_location_bar_color_for_secure_sites.user.css
+++ b/XUL_Change_the_location_bar_color_for_secure_sites.user.css
@@ -5,12 +5,12 @@
 }
 
 #urlbar[pageproxystate="valid"] #identity-box.verifiedDomain,
-#urlbar[pageproxystate="valid"] #identity-box.mixedActiveBlocked {
+#urlbar[pageproxystate="valid"] #identity-box.mixedActiveBlocked:not(.verifiedIdentity) {
   background-color: #ffb !important;
 }
 
 #urlbar[pageproxystate="valid"] #identity-box.verifiedDomain::after,
-#urlbar[pageproxystate="valid"] #identity-box.mixedActiveBlocked::after {
+#urlbar[pageproxystate="valid"] #identity-box.mixedActiveBlocked:not(.verifiedIdentity)::after {
   content: attr(tooltiptext);
   display: flex !important;
   color: #888 !important;
