--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -5,7 +5,8 @@
 
   /* 3rd party reseller */
   .buying b > a[href*="seller="], #BBAvailPlusMerchID b,   /* Old */
-  #merchant-info > a[href*="seller="], #soldByThirdParty b /* New */
+  #merchant-info > a[href*="seller="], #soldByThirdParty b,/* New */
+  .sc-seller > a[href*="seller="]                          /* Shopping cart */
   { color: #d00 !important; font: bold 240% sans-serif !important; word-wrap: break-word !important; }
 
   #BBAvailPlusMerchID b::before, /* Old */
