--- a/X-RAIN_tweak.user.css
+++ b/X-RAIN_tweak.user.css
@@ -1,7 +1,7 @@
 /* X-RAIN tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("http://www.river.go.jp/x/krd0107010.php") {
-  #main { width: 100% !important; height: 100% !important; }
+  #main { width: 100% !important; }
   #map-contents { width: auto !important; }
 
   #single-mp-radar, #mp-radar {
