--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -46,13 +46,17 @@
 
 
   /* Opaque elements */
+  #kcpApp_feature_div,    /* Kindle無料アプリをダウンロード */
+  #SendSample,            /* 無料サンプルを送信 */
   #primenote_feature_div,  /* 別の出品者から価格が低い商品が出品されています */
   .itemUsedAndNew,         /* ○○点の新品/中古品 ○○円より @wishlist */
   #moreBuyingChoices_feature_div,                   /* こちらからもご購入いただけます */
+  #usedBuySection, #usedbuyBox, #unqualifiedBuyBox,               /* 中古品（カートに入れるボタン） */
   #tellAFriendBox_feature_div, #tellAFriendBylineBox_feature_div, /* シェアする */
   #olp_feature_div,                                 /* 新品の出品 : ○ ￥○○より */
   .tmm-olp-links,                                   /* \○○ からの ○ 中古 (New) */
-  #sellYoursHere_feature_div                        /* この商品をお持ちですか？ (New) */
+  #sellYoursHere_feature_div,                       /* この商品をお持ちですか？ (New) */
+  .itemNotGiftableMessage, .itemNotGiftablePopoverLink /* 現在この商品はギフトとして購入することができません @wishlist */
   { opacity: 0.3 !important; }
 
   /* 値下がりしました ○○% @wishlist */
