--- a/Impress_watch_tweak.user.css
+++ b/Impress_watch_tweak.user.css
@@ -14,7 +14,7 @@
 
   /* Show bigger image by default */
   #zoom #page { width: 100% !important; }
-  #main-image-wrap, #main-image { max-width: none !important; }
+  #main-image-wrap, #main-image { max-width: 100% !important; }
 
   #zoom-btn { display: none !important; }
 
