Change the color of some location bar elements
Advanced locationbar v1.1.1 introduces the change of color from 'graytext' to 'rgba(0, 0, 0, 0.5)'.
It causes a bleeding of text.

--- a/XUL_Advanced_locationbar_tweak.user.css
+++ b/XUL_Advanced_locationbar_tweak.user.css
@@ -16,6 +16,14 @@
   margin-left: -1px !important;
 }
 
+.textbox-presentation-protocol,
+.textbox-presentation-subdomain,
+.textbox-presentation-port,
+.textbox-presentation-path,
+.textbox-presentation-file {
+  color: #888 !important;
+}
+
 .textbox-presentation-protocol[value^="https:"] {
   color: #0a0 !important;
 }
