--- a/Show_attachment_icon_for_Gmail.user.css
+++ b/Show_attachment_icon_for_Gmail.user.css
@@ -1,4 +1,4 @@
-/* Gmail attachment icons */
+/* Show attachment icon for Gmail */
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("mail.google.com") {
