--- a/Display_map_in_full_screen_for_X-RAIN.user.css
+++ b/Display_map_in_full_screen_for_X-RAIN.user.css
@@ -1,4 +1,4 @@
-/* X-RAIN tweak */
+/* Display map in full screen for X-RAIN */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("http://www.river.go.jp/x/krd0107010.php") {
   /* Display map in full screen */
