Kill opacity from location bar
Advanced locationbar v1.1.4 introduces the opacity to location bar.
It causes a bleeding of text.

--- a/XUL_Advanced_locationbar_tweak.user.css
+++ b/XUL_Advanced_locationbar_tweak.user.css
@@ -18,6 +18,17 @@
 
 .textbox-presentation-protocol,
 .textbox-presentation-subdomain,
+.textbox-presentation-slash,
+.textbox-presentation-port,
+.textbox-presentation-path,
+.textbox-presentation-file,
+.textbox-presentation-query,
+.textbox-presentation-fragment {
+  opacity: initial !important;
+}
+
+.textbox-presentation-protocol,
+.textbox-presentation-subdomain,
 .textbox-presentation-port,
 .textbox-presentation-path,
 .textbox-presentation-file {
