--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -36,6 +36,10 @@
   }
   .prime-alert-content { padding: 0 !important; }
 
+  /* このKindle版は読者によって問題が報告されています */
+  #kcqWarning .a-alert-content { font: bold larger/1 sans-serif !important; }
+  #kcqWarning .a-icon, #kcqWarning + i { transform: scale(1.5) !important; vertical-align: middle !important; }
+
   /* 品薄または希少等の理由により参考価格よりも高い価格で販売されている */
   .listPriceAlertPopover   { transform: scale(1.5) !important; margin: 0.4em 0.8em !important; }
   .listPriceAlertPopover i { vertical-align: middle !important; }
